# infokala-tracon

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: cicd.yaml
infokala_tracon/: event.py  settings.py  urls.py  views.py  wsgi.py
infokala_tracon/management/commands/: docker_start.py  infokala_setup_basic_workflow.py
infokala_tracon/templates/: infokala_tracon_forbidden.html
kompassi_oauth2/: backends.py
kubernetes/: default.vars.yaml  ingress.in.yaml  production.vars.yaml
kubernetes/gunicorn/: deployment.in.yaml
